- set subscription as a label for KuberLogic resource - checking subscription if exists for create operation - forbid pass subscription field for edit operation
