# modules/dynamic-apiserver/pkg/generated/restapi/operations/service/service_list_parameters.go
@@ -9,7 +9,9 @@ import (
 	"net/http"
 
 	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
 	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
 )
 
 // NewServiceListParams creates a new ServiceListParams object
@@ -28,6 +30,11 @@ type ServiceListParams struct {
 
 	// HTTP Request Object
 	HTTPRequest *http.Request `json:"-"`
+
+	/*subscription ID
+	  In: query
+	*/
+	SubscriptionID *string
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -39,8 +46,32 @@ func (o *ServiceListParams) BindRequest(r *http.Request, route *middleware.Match
 
 	o.HTTPRequest = r
 
+	qs := runtime.Values(r.URL.Query())
+
+	qSubscriptionID, qhkSubscriptionID, _ := qs.GetOK("SubscriptionID")
+	if err := o.bindSubscriptionID(qSubscriptionID, qhkSubscriptionID, route.Formats); err != nil {
+		res = append(res, err)
+	}
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+// bindSubscriptionID binds and validates parameter SubscriptionID from query.
+func (o *ServiceListParams) bindSubscriptionID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: false
+	// AllowEmptyValue: false
+
+	if raw == "" { // empty values pass all other validations
+		return nil
+	}
+	o.SubscriptionID = &raw
+
 	return nil
 }
